syntax = "proto3";

package health;

option go_package = "health/proto;proto";

service Health {
  // Метод для проверки состояния сервиса
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}

message HealthCheckRequest {
  string service = 1; // Название сервиса, для которого нужно проверить статус
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;     // Статус неизвестен
    SERVING = 1;     // Сервис работает нормально
    NOT_SERVING = 2; // Сервис недоступен
  }
  ServingStatus status = 1; // Текущий статус сервиса
}
